[BBS-BUG-140] Jingqiang ZHANG : post content can be auto wrapped now.

--- a/src/main/webapp/style/main.css
+++ b/src/main/webapp/style/main.css
@@ -144,6 +144,7 @@ td {
     background-color:#DDDDDD;
     text-align:left;
     padding: 5px;
+    word-wrap: break-word;
 }
 
 .form-for-post{
